# gtest-example

./: CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  Car.cpp  Car.h  CarInterface.h  Dmv.cpp  Dmv.h  DmvInterface.h
test/: CMakeLists.txt  CarMock.h  CarTest.cpp  DmvTest.cpp
